# octopus-kb-compound

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  getting-started.md  production-vault.md  repository-layout.md  roadmap.md  validators.md
docs/hooks/: claude-code-pretooluse.md
docs/plans/: 2026-04-05-v0-1-0-release-and-production-migration.md  2026-04-14-octopus-roadmap-implementation.md
docs/releases/: v0.1.0.md
eval/corpora/: README.md
examples/.claude/: settings.json.sample
examples/expanded-vault/: AGENTS.md
examples/hooks/: kb-grep-guard.sh  kb_pretool_extract.py
prompts/: propose.md
prompts/obsidian-graph/: README.md
schemas/: README.md  page-meta.json
schemas/cli/: lint.json  lookup.json  neighbors.json  retrieve-bundle.json
schemas/config/: v1.json
schemas/rules/: v1.json
scripts/: bootstrap_vault.py
skills/kb-ingest/: SKILL.md
skills/kb-maintain/: SKILL.md
src/octopus_kb_compound/: __init__.py  canonical.py  cli.py  config.py  (+18 more)
tests/: __init__.py  test_architecture_docs.py  test_bootstrap_script.py  test_ckr_models.py  test_ckr_operations.py  test_cli.py  test_config.py  test_eval_corpus.py  test_export.py  test_frontmatter.py  test_hook_script.py  test_impact.py  test_inbox.py  test_ingest.py  test_links.py  test_lint.py  test_llm.py  test_lookup.py  test_migrate.py  test_obsidian_codec.py  test_page_meta_schema.py  test_planner.py  test_profile.py  test_project_rename.py  test_propose.py  test_retrieve.py  test_schema_module.py  test_validators.py  test_vault.py
(+41 files in other folders)
