[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octopus-kb-compound"
version = "0.2.1"
description = "Self-growing, self-maintaining LLM knowledge bases and Obsidian knowledge graphs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Apple"}
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ingest = ["markitdown>=0.1"]

[project.scripts]
octopus-kb = "octopus_kb_compound.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
